fix: add hash router and some styling changes

--- a/src/pages/Technology/styles.css
+++ b/src/pages/Technology/styles.css
@@ -65,6 +65,9 @@
 }
 
 @media (min-width: 768px) {
+    body {
+        overflow-x: hidden;
+    }
     .technology__img {
         width: calc(100% + 5px);
         height: auto;
